{
    "name": "Controls",
    "maps": [
        {
            "name": "Global",
            "id": "ea508cac-7081-43e3-8b6a-96395a313066",
            "actions": [
                {
                    "name": "ClickInteraction",
                    "type": "Button",
                    "id": "3b3a568a-6b59-482c-a929-d8195a9bd689",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CameraMovement",
                    "type": "Button",
                    "id": "21612ca0-5b43-4049-8afe-aaa8aeab82a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aee544f0-a59e-43dd-b301-5c46ddebc79b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "ClickInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0de9bec4-12b3-4db6-b8b5-47f846be58a9",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "MazeModification",
            "id": "c23f94ba-1c90-44b6-bf5e-4fb2650735ae",
            "actions": [
                {
                    "name": "SetDefaultNode",
                    "type": "Button",
                    "id": "52638b61-d100-4dec-93b9-4e6dda2ee41e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetStartNode",
                    "type": "Button",
                    "id": "9c93bb33-3c91-443c-8775-175cac470b99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetDestinationNode",
                    "type": "Button",
                    "id": "b02d61aa-438b-456e-8b8d-d280bca0cc9a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SetBlockedNode",
                    "type": "Button",
                    "id": "d6ed8379-0573-4b4e-8eac-bc1ef9967af1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e681bda9-1fe1-4c9d-a8ea-63e710380c6a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SetDefaultNode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ea261d96-21eb-4beb-a5b3-e0da1f96efb8",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SetStartNode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de104dd1-3299-433e-b15f-f11bac5c55f7",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SetDestinationNode",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e2dacf1-5f80-4d50-898e-09c5a48906f9",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard&Mouse",
                    "action": "SetBlockedNode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard&Mouse",
            "bindingGroup": "Keyboard&Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}